--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <h1>Alurabook</h1>
+    <h1> O crush da Kauane é hetero.
+    </h1>
 </body>
 </html>
