--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O crush da Kauane é hetero.</title>
+    <title>AluraBooks</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <h1> O crush da Kauane é hetero.
-    </h1>
+    <header class="cabeçalho">
+        <div class=”container”>
+            <span class="cabeçalho__menu-hamburguer container_imagem"></span>
+            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
+        </div>   
+        <div class=”container”>
+            <a href="#"><img src="img/Favoritos.svg"  alt="Meus favoritos" class="container_imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container_imagem"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container_imagem"></a>
+        </div>
+    </header>
 </body>
 </html>
