--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
 <body>
     <header class="cabeçalho">
         <div class=”container”>
-            <span class="cabeçalho__menu-hamburguer container_imagem"></span>
+           <input type="checkbox" id="menu" class="container_botao">
+            <label for"menu">
+                 <span class="cabeçalho__menu-hamburguer container_imagem"></span>
+            </label>
+        <ul class="lista-menu">
+            <li class="lista-menu_titulo"> Categoria </li>
+            <li class="lista-menu_item">
+                <a href="#" class="lista-menu_link"> Programação </a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="#" class="lista-menu_link"> Crepúsculo </a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="#" class="lista-menu_link"> Barbie </a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="#" class="lista-menu_link"> Velozes e Furiosos </a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="#" class="lista-menu_link"> Harry Potter </a>
+            </li>
+            
+        </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
         </div>   
         <div class=”container”>
